# CIS-Assistant-

./: .gitignore  Bible  CIS Assistant  CONFIG_INSTRUCTIONS.md  EXAMPLES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  example_usage.py  mcp-config.json  pyproject.toml  setup.py
src/: __init__.py
src/cis_assistant_mcp/: __init__.py  server.py
